# Telegram-Downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  core.py  descarga.py  pyproject.toml  requirements.txt  run.sh  sesion_debiantg.session  test_connect.py  test_textual_connect.py  tui.py
.atl/: .skill-registry.cache.json  skill-registry.md
core/: __init__.py  catalog.py  config.py  download.py  engine.py  media.py  telegram.py
format/: ansi.py  textual.py
tui/: __init__.py  __main__.py  app.py  helpers.py
tui/screens/: catalog.py  config.py  dialogs.py  login.py  main.py
